"Updated .gitignore, README.md, index.js, package.json, swagger.json, and various controller and route files with new code and modifications."
